Added login/logut functionality, added simple middleware

--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -3,3 +3,9 @@
 <h3>You found me!!!</h3>
 
 <img src="https://images.unsplash.com/photo-1498583886829-28abdabc062f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+
+
+
+<li><a href="/register">Sign up</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
