--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,10 @@
-<h1>Sign Up Form</h1>
+<h1>Login</h1>
 
-<form action="/register" method="POST">
+<form action="/login" method="POST">
     <input type="text" name="username" placeholder="username">
-    <input type="password" name="password"  placeholder="password">
-    <button>Submit</button>
+    <input type="password" name="password" placeholder="password">
+    <button>Login</button>
 </form>
-
 
 
 
